force-app/main/default/objects/TaskItem__c/TaskItem__c.object-meta.xml
<CustomObject>
    <label>Task Item</label>
    <pluralLabel>Task Items</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Task Name</label>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>To-Do tasks for the Salesforce app</description>
</CustomObject>