force-app/main/default/objects/TaskItem__c/fields/Due_Date__c.field-meta.xml
<CustomField>
  <fullName>Due_Date__c</fullName>
  <label>Due Date</label>
  <type>Date</type>
</CustomField>