force-app/main/default/objects/TaskItem__c/fields/IsImportant__c.field-meta.xml
<CustomField>
  <fullName>IsImportant__c</fullName>
  <label>Is Important</label>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
</CustomField>