force-app/main/default/objects/TaskItem__c/fields/Status__c.field-meta.xml
<CustomField>
  <fullName>Status__c</fullName>
  <label>Status</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <sorted>true</sorted>
      <value>
        <fullName>To Do</fullName>
        <default>true</default>
        <label>To Do</label>
      </value>
      <value>
        <fullName>In Progress</fullName>
      </value>
      <value>
        <fullName>Done</fullName>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>